--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
                             La jornada comenzó con la llegada de las estrellas del fútbol mundial al teatro, donde los
                             fanáticos y expertos anticipaban con ansias el veredicto de la prestigiosa ceremonia. Entre
                             los nominados se encontraban otros grandes nombres del deporte, pero Messi, con una
-                            temporada fenomenal, era el favorito para llevarse el galardón.
-
+                            temporada fenomenal, era el favorito para llevarse el galardón. 
+                            
+                            <span class="ocultar">
                             La ceremonia de entrega del Balón de Oro estuvo llena de momentos emotivos. La tensión se
                             palpaba en el aire mientras los finalistas aguardaban el veredicto final. Cuando se anunció
                             que Lionel Messi era el ganador, el teatro estalló en aplausos y ovaciones, reconociendo el
@@ -95,7 +96,7 @@
                             entrenadores, familia y, por supuesto, sus apasionados fanáticos. "Este premio no solo es
                             mío, sino de todos aquellos que han sido parte de mi viaje. Sin el apoyo de mis compañeros y
                             el respaldo inquebrantable de mis seguidores, no estaría aquí", dijo Messi con humildad.
-                            <span class="ocultar">La temporada que llevó a Messi a su octavo Balón de Oro fue una
+                            La temporada que llevó a Messi a su octavo Balón de Oro fue una
                                 exhibición de habilidad y consistencia. Desde el comienzo del año, el delantero
                                 argentino deslumbró con su desempeño tanto en el ámbito nacional como en el
                                 internacional. Sus impresionantes actuaciones con su club y la selección argentina
@@ -161,6 +162,7 @@
                                 del fútbol mundial, su viaje ha sido inspirador. Su dedicación, habilidad y actitud
                                 positiva lo han convertido en un favorito de los fanáticos y, ahora, en el Mejor Arquero
                                 del Año.
+                                <span class="ultimo-responsive">
 
                                 La noticia de la victoria de Martínez en los Premios The Best ha resonado en todo el
                                 mundo del fútbol. En la ceremonia, el arquero argentino expresó su agradecimiento y
@@ -169,7 +171,9 @@
                                 el campo", compartió Martínez en su discurso de aceptación.
 
                                 La temporada destacada de Martínez con su club y la selección argentina fue clave para
-                                asegurar este prestigioso galardón. <span class="ocultar">Desde su participación en la Copa América hasta sus
+                                asegurar este prestigioso galardón.
+                            </span>
+                            <span class="ocultar">Desde su participación en la Copa América hasta sus
                                 destacadas actuaciones en la Premier League con el Aston Villa, Martínez demostró ser no
                                 solo un guardameta confiable, sino un líder dentro y fuera del campo.
                                 Su actuación en la Copa América, donde Argentina se coronó campeona, dejó una marca imborrable. Martínez fue una muralla infranqueable, con atajadas cruciales que ayudaron a su equipo a alzar el trofeo. Su seguridad bajo los tres palos y su habilidad para enfrentar los momentos de presión fueron vitales para el éxito de la selección.
