--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -67,6 +67,7 @@
             <h3>
                 Ayuda
             </h3>
+            <div class="links__footer">
             <a href="#">Novedades</a>
             <a href="#">Ultima moda</a>
             <a href="#">Destacados</a>
@@ -74,32 +75,36 @@
             <a href="#">Opciones de pago</a>
             <a href="#">Politica de Cambios</a>
         </div>
+        </div>
         <div class="footer__redes">
             <div class="aboutUs">
                 <h3>
-                    Acerca de Corre Camino
+                    Acerca de La Scaloneta
                 </h3>
                 <p>
-                    ¡Únete a nosotros en este emocionante viaje a través del mundo del deporte! Siéntete libre de
+                    ¡Subite a La Scaloneta y realicemos juntos este emocionante viaje a través del mundo del futbol!
+                    Siéntete libre de
                     explorar nuestro sitio y participar en conversaciones apasionadas sobre tu deporte favorito. Estamos
-                    ansiosos por compartir esta aventura contigo y por seguir celebrando juntos el espíritu del deporte.
+                    ansiosos por compartir este viaje contigo y por seguir celebrando juntos los trinfos de la
+                    Selección.
                 </p>
             </div>
             <div class="redes">
-                <a href=""><i class="fab fa-facebook-square"></i></a>
-                <a href=""><i class="fab fa-twitter-square"></i></a>
-                <a href=""><i class="fab fa-instagram"></i></a>
-                <a href=""><i class="fab fa-twitch"></i></a>
-                <a href=""><i class="fab fa-tiktok"></i></a>
+                <a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                <a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                <a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="http://www.twitch.tv" target="_blank"><i class="fab fa-twitch"></i></a>
+                <a href="http://www.tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
             </div>
 
         </div>
         <div class="footer__info">
-            <h3>
-                Contactanos
-            </h3>
+           
             <div class="info-contacto">
                 <div class="info">
+                    <h3>
+                        Contactanos
+                    </h3>
                     <p>
                         Dirección: Wall St, New York, NY, EE. UU.
                     </p>
