--- a/pages/fixture.html
+++ b/pages/fixture.html
@@ -199,7 +199,7 @@
                             <th>Local</th>
                             <th>Visitante</th>
                             <th>Horario</th>
-                            <th>Estadio</th>
+                            <th class="none-responsive">Estadio</th>
                         </tr>
                     </thead>
                     <tr>
@@ -207,49 +207,49 @@
                         <td>Brasil</td>
                         <td>Argentina</td>
                         <td>21:30 hs</td>
-                        <td>Maracana</td>
+                        <td class="none-responsive">Maracana</td>
                     </tr>
                     <tr>
                         <td>05 Sep. 2024</td>
                         <td>Argentina</td>
                         <td>Chile</td>
                         <td>Por definirse</td>
-                        <td>Por definirse</td>
+                        <td class="none-responsive">Por definirse</td>
                     </tr>
                     <tr>
                         <td>10 Sep. 2024</td>
                         <td>Colombia</td>
                         <td>Argentina</td>
                         <td>Por definirse</td>
-                        <td>Por definirse</td>
+                        <td class="none-responsive">Por definirse</td>
                     </tr>
                     <tr>
                         <td>10 Oct. 2024</td>
                         <td>Venezuela</td>
                         <td>Argentina</td>
                         <td>Por definirse</td>
-                        <td>Por definirse</td>
+                        <td class="none-responsive">Por definirse</td>
                     </tr>
                     <tr>
                         <td>15 Oct. 2024</td>
                         <td>Argentina</td>
                         <td>Bolivia</td>
                         <td>Por definirse</td>
-                        <td>Por definirse</td>
+                        <td class="none-responsive">Por definirse</td>
                     </tr>
                     <tr>
                         <td>14 Nov. 2024</td>
                         <td>Paraguay</td>
                         <td>Argentina</td>
                         <td>Por definirse</td>
-                        <td>Por definirse</td>
+                        <td class="none-responsive">Por definirse</td>
                     </tr>
                     <tr>
                         <td>19 Nov. 2024</td>
                         <td>Argentina</td>
                         <td>Peru</td>
                         <td>Por definirse</td>
-                        <td>Por definirse</td>
+                        <td class="none-responsive">Por definirse</td>
                     </tr>
                 </table>
             </div>
@@ -361,6 +361,7 @@
             <h3>
                 Ayuda
             </h3>
+            <div class="links__footer">
             <a href="#">Novedades</a>
             <a href="#">Ultima moda</a>
             <a href="#">Destacados</a>
@@ -368,32 +369,36 @@
             <a href="#">Opciones de pago</a>
             <a href="#">Politica de Cambios</a>
         </div>
+        </div>
         <div class="footer__redes">
             <div class="aboutUs">
                 <h3>
-                    Acerca de Corre Camino
+                    Acerca de La Scaloneta
                 </h3>
                 <p>
-                    ¡Únete a nosotros en este emocionante viaje a través del mundo del deporte! Siéntete libre de
+                    ¡Subite a La Scaloneta y realicemos juntos este emocionante viaje a través del mundo del futbol!
+                    Siéntete libre de
                     explorar nuestro sitio y participar en conversaciones apasionadas sobre tu deporte favorito. Estamos
-                    ansiosos por compartir esta aventura contigo y por seguir celebrando juntos el espíritu del deporte.
+                    ansiosos por compartir este viaje contigo y por seguir celebrando juntos los trinfos de la
+                    Selección.
                 </p>
             </div>
             <div class="redes">
-                <a href=""><i class="fab fa-facebook-square"></i></a>
-                <a href=""><i class="fab fa-twitter-square"></i></a>
-                <a href=""><i class="fab fa-instagram"></i></a>
-                <a href=""><i class="fab fa-twitch"></i></a>
-                <a href=""><i class="fab fa-tiktok"></i></a>
+                <a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                <a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                <a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="http://www.twitch.tv" target="_blank"><i class="fab fa-twitch"></i></a>
+                <a href="http://www.tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
             </div>
 
         </div>
         <div class="footer__info">
-            <h3>
-                Contactanos
-            </h3>
+           
             <div class="info-contacto">
                 <div class="info">
+                    <h3>
+                        Contactanos
+                    </h3>
                     <p>
                         Dirección: Wall St, New York, NY, EE. UU.
                     </p>
