--- a/pages/fixture.html
+++ b/pages/fixture.html
@@ -198,57 +198,59 @@
                             <th>Fecha</th>
                             <th>Local</th>
                             <th>Visitante</th>
-                            <th>Horario</th>
-                            <th class="none-responsive">Estadio</th>
+                            <th class="ultimo_responsive">
+                                Horario</th>
+                            <th class="none-responsive">
+                                Estadio</th>
                         </tr>
                     </thead>
                     <tr>
                         <td>21 Nov. 2023</td>
                         <td>Brasil</td>
                         <td>Argentina</td>
-                        <td>21:30 hs</td>
+                        <td  class="ultimo_responsive">21:30 hs</td>
                         <td class="none-responsive">Maracana</td>
                     </tr>
                     <tr>
                         <td>05 Sep. 2024</td>
                         <td>Argentina</td>
                         <td>Chile</td>
-                        <td>Por definirse</td>
+                        <td class="ultimo_responsive">Por definirse</td>
                         <td class="none-responsive">Por definirse</td>
                     </tr>
                     <tr>
                         <td>10 Sep. 2024</td>
                         <td>Colombia</td>
                         <td>Argentina</td>
-                        <td>Por definirse</td>
+                        <td class="ultimo_responsive">Por definirse</td>
                         <td class="none-responsive">Por definirse</td>
                     </tr>
                     <tr>
                         <td>10 Oct. 2024</td>
                         <td>Venezuela</td>
                         <td>Argentina</td>
-                        <td>Por definirse</td>
+                        <td class="ultimo_responsive">Por definirse</td>
                         <td class="none-responsive">Por definirse</td>
                     </tr>
                     <tr>
                         <td>15 Oct. 2024</td>
                         <td>Argentina</td>
                         <td>Bolivia</td>
-                        <td>Por definirse</td>
+                        <td class="ultimo_responsive">Por definirse</td>
                         <td class="none-responsive">Por definirse</td>
                     </tr>
                     <tr>
                         <td>14 Nov. 2024</td>
                         <td>Paraguay</td>
                         <td>Argentina</td>
-                        <td>Por definirse</td>
+                        <td class="ultimo_responsive">Por definirse</td>
                         <td class="none-responsive">Por definirse</td>
                     </tr>
                     <tr>
                         <td>19 Nov. 2024</td>
                         <td>Argentina</td>
                         <td>Peru</td>
-                        <td>Por definirse</td>
+                        <td class="ultimo_responsive">Por definirse</td>
                         <td class="none-responsive">Por definirse</td>
                     </tr>
                 </table>
