--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <input type="checkbox" name="" id="check" class="checkbox none">
             <ul class="header__navegacion__ul">
                 <li>
-                    <a href="/index.html">inicio</a>
+                    <a href="index.html">inicio</a>
                 </li>
                 <li>
                     <a href="./pages/plantel.html">Plantel</a>
