realizando el SEO

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explora la pasión del fútbol en su máxima expresión con la Selección Argentina. Descubre la historia, los jugadores estrella y la emoción de uno de los equipos más icónicos del mundo. Únete a la fiebre de la Scaloneta y sumérgete en la grandeza del fútbol argentino. ¡Vive la intensidad, la gloria y el orgullo con la Selección Argentina en cada página!">
+    <meta name="keywords" content="fútbol argentino, selección argentina, jugadores estrella, historia del fútbol, albiceleste, Lionel Messi, Mundial de la FIFA, orgullo nacional, emoción del fútbol, gloria deportiva, campeonatos internacionales, pasión futbolística, equipo nacional, partidos históricos, cultura futbolística argentina">
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="shortcut icon" href="img/favicon/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
-    <title>Scaloneta</title>
+    <title>Scaloneta - inicio</title>
 </head>
 
 <body>
