todas las img comprimidas

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main>
         <section class="section__promocion">
             <div class="section__promocion__img">
-                <img src="img/scaloneta/La-scaloneta.jpeg" alt="Banner Scaloneta">
+                <img src="img/scaloneta/img_banners/banner.jpg" alt="Banner Scaloneta">
             </div>
         </section>
         <section class="galeria-responsive">
@@ -208,7 +208,7 @@
         </section>
         <section class="proximos_encuentro">
             <div class="img_encuentro">
-                <img src="img/scaloneta/img_banners/encuentro.jpg" alt="Argentina vs Uruguay">
+                <img src="img/scaloneta/img_banners/agrntina.jpg" alt="Argentina vs Uruguay">
             </div>
         </section>
         <section class="section__categoria">
